restructure repository and update README

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,23 +5,12 @@
    "version": "0.2.0",
    "configurations": [
         {
-            "name": ".NET Core Watch & Launch (Blazor Standalone)",
-            "type": "coreclr",
-            "request": "launch",
-            "program": "dotnet",
-            "args": ["watch", "run"],
-            "cwd": "${workspaceFolder}",
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        {
             "name": ".NET Core Launch (Blazor Standalone)",
             "type": "coreclr",
             "request": "launch",
             "program": "dotnet",
             "args": ["run"],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/src",
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
@@ -33,7 +22,7 @@
             "timeout": 30000,
             // If you have changed the default port / launch URL make sure to update the expectation below
             "url": "https://localhost:5001",
-            "webRoot": "${workspaceFolder}",
+            "webRoot": "${workspaceFolder}/src",
             "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
         }
     ]
